--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,18 +11,12 @@ env:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
     - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      run: cargo build --release
     - uses: actions/upload-artifact@v3
       with:
-        name: target
-        path: target/
+        name: binary
+        path: target/release/championship-standings-overlay.exe
